# openclaw-swarm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  OPENCLAW_V2_CHANGELOG.md  README.md  constitutional_guardian_v2.py  openclaw_v2_core.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
auto_heal/: __init__.py  pipeline.py
config/: agents.yaml  models.yaml
credential_pool/: __init__.py  pool.py
dashboards/: live_hud.html
dual_memory/: __init__.py  memory.py
evolution_engine/: __init__.py  engine.py
examples/: 01_basic_usage.py  02_web_search.py  03_provider_management.py  04_streaming.py  05_hooks.py  06_tools.py  07_mcp_server.py  08_rag_system.py  09_workflow_engine.py
headless_mode/: __init__.py  runner.py
openclaw_swarm/: __init__.py  anonymizer.py  cli.py  dashboard.py  evaluation.py  experience.py  hooks.py  mcp.py  memory.py  multi_tier_memory.py  orchestrator.py  plugins.py  providers.py  rag.py  router.py  streaming.py  swarm.py  task_queue.py  tools.py  web_search.py  workflow.py
openclaw_swarm/agents/: __init__.py  coder.py  planner.py  researcher.py  reviewer.py
openclaw_swarm/v2/: __init__.py  core.py
openclaw_swarm/v2/auto_heal/: __init__.py  pipeline.py
openclaw_swarm/v2/credential_pool/: __init__.py  pool.py
openclaw_swarm/v2/dual_memory/: __init__.py  memory.py
openclaw_swarm/v2/evolution_engine/: __init__.py  engine.py
openclaw_swarm/v2/guardian/: __init__.py  guardian.py
openclaw_swarm/v2/headless_mode/: __init__.py  runner.py
openclaw_swarm/v2/plugin_system/: __init__.py  manager.py
openclaw_swarm/v2/web_ui/: __init__.py  (+1 more)
realtime_hud/: __init__.py  dashboard.py
skills_marketplace/: __init__.py  marketplace.py
swarm_orchestrator/: __init__.py  orchestrator.py
tests/: test_anonymizer.py  test_evaluation.py  test_hooks.py  test_integration.py  test_mcp.py  test_multi_tier_memory.py  test_performance.py  test_plugins.py  test_providers.py  test_rag.py  test_streaming.py  test_swarm.py  test_task_queue.py  test_tools.py  test_v2.py  test_web_search.py  test_workflow.py
(+12 files in other folders)
